--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "start": "NODE_ENV=production npx nodemon src/index.ts --watch 'src/' -e ts",
+    "dev": "nodemon src/index.ts --watch src/ -e ts",
     "build": "npx tsc",
-    "dev": "node dist/index.js"
+    "start": "NODE_ENV=production pm2 start dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +28,8 @@
     "@types/express": "^5.0.1",
     "@types/node": "^22.13.13",
     "@types/qrcode-terminal": "^0.12.2",
+    "nodemon": "^3.1.9",
+    "pm2": "^6.0.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2"
