--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^22.13.13",
     "@types/node-cron": "^3.0.11",
     "@types/qrcode-terminal": "^0.12.2",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.9",
     "pm2": "^6.0.5",
     "ts-node": "^10.9.2",
